--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": {
     "name": "wangding",
     "email": "408542507@qq.com",
-    "url": "http://i.wangding.in"
+    "url": "http://i.wangding.co"
   },
   "repository": {
     "type": "git",
